# SMAC_3.0

./: .gitignore  README.md
inchworm_algo/: CMakeLists.txt  package.xml
inchworm_algo/data/: 10x10_pattern0.csv  10x10_pattern1.csv  10x12_pattern0.csv  10x12_pattern1.csv  16x16_pattern0.csv  20x20_pattern0.csv  25x25_pattern0.csv  25x25_pattern1.csv  30x30_pattern0.csv  30x30_pattern1.csv  30x30_pattern2.csv  50x50_pattern0.csv  50x50_pattern2.csv  6x6_pattern0.csv  process.py
inchworm_algo/launch/: algo_sim.launch
inchworm_algo/msg/: AlgoFinished.msg  InchwormMsg.msg  InchwormsMsg.msg  RoofState.msg  ShingleMsg.msg
inchworm_algo/src/: algo_node.py  algo_visualizer.py  create_graph.py  create_graph_many_patterns.py  inchworm.py  (+8 more)
inchworm_control/: CMakeLists.txt  package.xml
inchworm_description/: CMakeLists.txt  TRIALS.md  package.xml
inchworm_description/config/: inchworm_control.yaml  joint_names_inchworm_description.yaml  joints.xml
inchworm_description/launch/: gazebo.launch  gazebo_and_rviz.launch
inchworm_description/magnets/: inchworm.urdf.xacro  shingle.urdf.xacro
inchworm_description/media/: Demo_Shingle.STL  Demo_Shingle.dae
inchworm_description/rviz/: hardware_viz.rviz  inchworm_frames.rviz
inchworm_description/scripts/: generate_sdfs.py  iw_tf_republisher.py  load_control_params.py  load_controller_spawners.py  load_nodes.py  load_robot_urdf.py  load_state_publishers.py  log_joints.py  magnet_state_observer.py  mate_suppress_test.py
inchworm_description/sdf/: all_models.sdf  double_shingle.sdf  inchworm_description.sdf  inchworm_magnets.sdf  roof.sdf  shingle.sdf
inchworm_description/urdf/: inchworm_description.urdf
inchworm_hw_interface/: CMakeLists.txt  package.xml
inchworm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ros_control_boilerplate/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
ros_control_boilerplate/inchworm_control/: CMakeLists.txt  package.xml
ros_control_boilerplate/inchworm_control/config/: inchworm_controllers.yaml
ros_control_boilerplate/inchworm_control/include/inchworm_control/: inchworm_hw_interface.h
ros_control_boilerplate/inchworm_control/launch/: inchworm_hardware.launch  inchworm_simulation.launch  inchworm_test_trajectory.launch  inchworm_visualize.launch
ros_control_boilerplate/inchworm_control/src/: inchworm_hw_interface.cpp  inchworm_hw_main.cpp
(+102 files in other folders)
