<package format="2">
  <name>inchworm_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for inchworm_description</p>
    <p>This package contains configuration data, 3D models and launch files
for inchworm_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>assembly_sim</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
  <!-- https://answers.gazebosim.org//question/6568/uri-paths-to-packages-in-the-sdf-model-file/ -->
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
</export>
</package>